--- a/package.json
+++ b/package.json
@@ -1,10 +1,8 @@
 {
   "name": "server",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "",
   "main": "bundle.js",
-  "//type": "module",
-  "//": "the line above is for ES6",
   "scripts": {
     "start": "node ./bundle.js" 
   },
@@ -28,6 +26,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.7",
     "nodemailer": "^6.9.13",
+    "redis": "^4.6.15",
     "rotating-file-stream": "^3.2.1",
     "zod": "^3.23.5"
   },
